@@ -4,6 +4,7 @@ Version 1.4.1
 * NOTE: Active version is now in DiFX-2.0 / trunk
 * Respect DEFAULT_DMS_MASK
 * Add Write-only option to testmod
+* Fix parsing of mark5 directory files: stepping through extra parameters had a bug.
 
 Version 1.4
 ~~~~~~~~~~~
